# gleam-io-automation

./: Cargo.toml
crawler/: .gitignore  Cargo.toml  README.md
crawler/src/: backup.rs  config.rs  crawler.rs  database.rs  gleam.rs  google.rs  main.rs  meilisearch.rs  stats.rs
extension/: Cargo.toml
extension/pkg/: manifest.json
extension/pkg/twitter/: retweet.js  tweet.js
extension/src/: bot_logic.rs  checkbox.rs  format.rs  lib.rs  messages.rs  request.rs  settings.rs  style.css  yew_app.rs
format/: Cargo.toml
format/src/: campaign.rs  classifier.rs  contestant.rs  entry.rs  giveaway.rs  incentive.rs  lib.rs  parsing.rs  prelude.rs  shortener.rs
googleam/: .gitignore  Cargo.toml
googleam/src/: js.js  lib.rs  miscellaneous.rs
src/: bot_logic.rs  checkbox.rs  classifier.rs  format.rs  lib.rs  messages.rs  request.rs  settings.rs  style.css  yew_app.rs
