[package]
name = "gleam-extension"
version = "0.2.3"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
format = {path="../format"}
wasm-bindgen = {version="0.2", features=["serde-serialize"]}
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.6"
yew = "0.17"
string-tools = "0.1"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
urlencoding = "1.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "HtmlCollection",
    "Document",
    "InputEvent",
    "Crypto",
    "HtmlDocument",
]

[features]
norequest = []
