[package]
name = "googleam"
version = "0.1.0"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.17", features = ["web_sys"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde_json = "1.0"
anyhow = "1.0"
serde = {version="1.0", features=["derive"]}
urlencoding = "1.1"
web-sys = {version="0.3", features=["Crypto", "Window"]}
format = {path="../format"}
meilisearch-sdk = "0.4"

[profile.release]
lto = true
opt-level = 's'